@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-08-24T08:29:16Z",
-  "count_outdated" : 609,
-  "uniques_outdated" : 46,
+  "timestamp" : "2022-08-25T02:30:12Z",
+  "count_outdated" : 610,
+  "uniques_outdated" : 47,
   "count" : 633,
   "uniques" : 49,
   "views" : [
-    {
-      "timestamp": "2022-08-11T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-08-12T00:00:00Z",
       "count": 7,
