@@ -1,12 +1,7 @@
 {
-  "count": 24,
+  "count": 23,
   "uniques": 1,
   "views": [
-    {
-      "timestamp": "2022-08-11T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-08-12T00:00:00Z",
       "count": 7,
